# tensor-mem

./: CLAUDE.md  README.md  pyproject.toml  vulture_whitelist.py
baseline/: __init__.py  block.py  config.py  models.py  positional_encoding.py
benchmark/: __init__.py  order_reversal.py  run_order_reversal.py
docs/: declarative-configuration.md  infini.md  new-llm.md  tensor-mem-spec.md
examples/: basic_usage.py
scripts/: analysis.py  compare.py  config.py  data.py  models.py  train.py  training.py
tensor_mem/: __init__.py  attention.py  memory.py  utils.py
tensor_mem/layer/: __init__.py  ffn.py  prenorm.py  tensor_memory_layer.py
tensor_mem/llm/: __init__.py  config.py  layer.py  models.py
tensor_mem/memory/: __init__.py  base.py  config.py  decaying.py  multi_head.py  tensor.py
tests/: __init__.py  test_attention.py  test_layer.py  test_memory.py  test_utils.py
